--- a/array methods/js-1.html
+++ b/array methods/js-1.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <p id="demo"></p>
+   <p id="demo"></p>
     <p id="demo_1"></p>
     <p id="demo_2"></p>
     <p id="demo_3"></p>
@@ -23,7 +23,7 @@
     <script>
 
 
-        input_array = ["Parker", "Emma", "Warren", "shital", "yhi", "peter"];
+        var input_array = ["Parker", "Emma", "Warren", "shital", "yhi", "peter"];
 
         document.getElementById("demo").innerHTML = input_array;
 
@@ -37,7 +37,7 @@
 
 
 
-        input_array = ["Parker", "Emma", "Warren", "shital", "yhi", "peter"];
+        var input_array = ["Parker", "Emma", "Warren", "shital", "yhi", "peter"];
 
         input_array.push("Michel");
 
@@ -45,7 +45,7 @@
 
 
 
-        input_array = [10, 20, 40, 60, 80, 100, 6, 5, 4, 3, 2, 1, -2, -100, -40, -70, 17];
+        var input_array = [10, 20, 40, 60, 80, 100, 6, 5, 4, 3, 2, 1, -2, -100, -40, -70, 17];
 
         result = input_array.filter(function (x) {
             if (x < -0) {
@@ -63,7 +63,7 @@
 
 
 
-        input_array = [2, 3, 4]
+        var input_array = [2, 3, 4]
 
         output = input_array.map(function (x) {
 
@@ -72,7 +72,9 @@
 
 
         })
-        document.getElementById("demo_4").innerHTML = output</script>
+        document.getElementById("demo_4").innerHTML = output
+        
+        </script>
 
 
 
